--- a/app/views/newsletters/new.html.haml
+++ b/app/views/newsletters/new.html.haml
@@ -1,7 +1,13 @@
+%h2 Add a newsletter to the list
+
 = bootstrap_form_for @newsletter do |f|
-  = f.text_field :name
-  = f.text_field :description
-  = f.text_field :website_url
-  = f.collection_check_boxes :category_ids, Category.all, :id, :name, inline: true
+  = f.text_field :name, hide_label: true, placeholder: "Enter the title of the newsletter.", label_class: "form-control input-lg"
+  = f.text_field :description, hide_label: true, placeholder: "Add some information about the newsletter."
+  = f.text_field :website_url, hide_label: true, placeholder: "www.domain.com of the newsletter?"
+  = f.collection_check_boxes :category_ids, Category.all, :id, :name, inline: true, label: "Category"
   = f.submit "Submit"
 
+
+
+
+<input type="text" class="form-control input-lg" placeholder="Large" />
