--- a/app/assets/stylesheets/flat-ui.css.scss
+++ b/app/assets/stylesheets/flat-ui.css.scss
@@ -8,54 +8,54 @@
   font-style: normal;
   font-weight: 900;
 
-  src:font-url('lato-black.eot');
-  src:font-url('lato-black.eot?#iefix') format('embedded-opentype'), url('lato-black.woff') format('woff'), url('lato-black.ttf') format('truetype'), url('lato-black.svg#latoblack') format('svg');
+  src:url('lato-black.eot');
+  src:url('lato-black.eot?#iefix') format('embedded-opentype'), url('lato-black.woff') format('woff'), url('lato-black.ttf') format('truetype'), url('lato-black.svg#latoblack') format('svg');
   }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: bold;
 
-  src:font-url('lato-bold.eot');
-  src:font-url('lato-bold.eot?#iefix') format('embedded-opentype'), url('lato-bold.woff') format('woff'), url('lato-bold.ttf') format('truetype'), url('lato-bold.svg#latobold') format('svg');
+  src:url('lato-bold.eot');
+  src:url('lato-bold.eot?#iefix') format('embedded-opentype'), url('lato-bold.woff') format('woff'), url('lato-bold.ttf') format('truetype'), url('lato-bold.svg#latobold') format('svg');
   }
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: bold;
 
-  src:font-url('lato-bolditalic.eot');
-  src:font-url('lato-bolditalic.eot?#iefix') format('embedded-opentype'), url('lato-bolditalic.woff') format('woff'), url('lato-bolditalic.ttf') format('truetype'), url('lato-bolditalic.svg#latobold-italic') format('svg');
+  src:url('lato-bolditalic.eot');
+  src:url('lato-bolditalic.eot?#iefix') format('embedded-opentype'), url('lato-bolditalic.woff') format('woff'), url('lato-bolditalic.ttf') format('truetype'), url('lato-bolditalic.svg#latobold-italic') format('svg');
   }
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: normal;
 
-  src:font-url('lato-italic.eot');
-  src:font-url('lato-italic.eot?#iefix') format('embedded-opentype'), url('lato-italic.woff') format('woff'), url('lato-italic.ttf') format('truetype'), url('lato-italic.svg#latoitalic') format('svg');
+  src:url('lato-italic.eot');
+  src:url('lato-italic.eot?#iefix') format('embedded-opentype'), url('lato-italic.woff') format('woff'), url('lato-italic.ttf') format('truetype'), url('lato-italic.svg#latoitalic') format('svg');
   }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
 
-  src:font-url('lato-light.eot');
-  src:font-url('lato-light.eot?#iefix') format('embedded-opentype'), url('lato-light.woff') format('woff'), url('lato-light.ttf') format('truetype'), url('lato-light.svg#latolight') format('svg');
+  src:url('lato-light.eot');
+  src:url('lato-light.eot?#iefix') format('embedded-opentype'), url('lato-light.woff') format('woff'), url('lato-light.ttf') format('truetype'), url('lato-light.svg#latolight') format('svg');
   }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: normal;
 
-  src:font-url('lato-regular.eot');
-  src:font-url('lato-regular.eot?#iefix') format('embedded-opentype'), url('lato-regular.woff') format('woff'), url('lato-regular.ttf') format('truetype'), url('lato-regular.svg#latoregular') format('svg');
+  src:url('lato-regular.eot');
+  src:url('lato-regular.eot?#iefix') format('embedded-opentype'), url('lato-regular.woff') format('woff'), url('lato-regular.ttf') format('truetype'), url('lato-regular.svg#latoregular') format('svg');
   }
 @font-face {
   font-family: 'Flat-UI-Icons';
 
-  src:font-url('../fonts/glyphicons/flat-ui-icons-regular.eot');
-  src:font-url('../fonts/glyphicons/flat-ui-icons-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons/flat-ui-icons-regular.woff') format('woff'), url('../fonts/glyphicons/flat-ui-icons-regular.ttf') format('truetype'), url('../fonts/glyphicons/flat-ui-icons-regular.svg#flat-ui-icons-regular') format('svg');
+  src:url('../fonts/glyphicons/flat-ui-icons-regular.eot');
+  src:url('../fonts/glyphicons/flat-ui-icons-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons/flat-ui-icons-regular.woff') format('woff'), url('../fonts/glyphicons/flat-ui-icons-regular.ttf') format('truetype'), url('../fonts/glyphicons/flat-ui-icons-regular.svg#flat-ui-icons-regular') format('svg');
   }
 [class^="fui-"],
 [class*="fui-"] {
