--- a/app/views/newsletters/new.html.haml
+++ b/app/views/newsletters/new.html.haml
@@ -4,6 +4,6 @@
   = f.text_field :name, hide_label: true, placeholder: "Enter the title of the newsletter.", label_class: "form-control input-lg"
   = f.text_area :description, hide_label: true, placeholder: "Add some information about the newsletter."
   = f.text_field :website_url, hide_label: true, placeholder: "www.domain.com of the newsletter?"
-  = f.collection_check_boxes :category_ids, Category.all, :id, :name, inline: true, label: "Category"
+  = f.collection_check_boxes :category_ids, Category.all, :id, :name, inline: true, label: "Category", label_class: "custom-checkbox"
   = f.submit "Submit"
 
