--- a/app/views/newsletters/index.html.haml
+++ b/app/views/newsletters/index.html.haml
@@ -4,7 +4,7 @@
       .row
         .col-md-1{:class => "text-center"}
           %br
-          %a
+          %a(href=newsletters_path)
             %span{:class => "glyphicon glyphicon-triangle-top text-center"}
             %p 50 votes
         .col-md-10
