--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,6 +9,16 @@
         = link_to "Add newsletter", new_newsletter_path
       %li
         = link_to "View newsletters", newsletters_path
+      %li.dropdown
+        %a{:class =>"dropdown-toggle", "data-toggle" =>"dropdown"}(href="#")
+          Large Button
+          %b.caret
+        %span.dropdown-arrow
+        %ul.dropdown-menu
+          %li= link_to "Register", register_path
+          %li.divider
+          %li= link_to "Login", register_path
+          %li= link_to "Logout", register_path
     %form.navbar-form.navbar-right{:action => "#", :role => "search"}
       .form-group
         .input-group
@@ -16,3 +26,5 @@
           %span.input-group-btn
             %button.btn{:type => "submit"}
               %span.fui-search
+
+  
