--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -11,14 +11,16 @@
         = link_to "View newsletters", newsletters_path
       %li.dropdown
         %a{:class =>"dropdown-toggle", "data-toggle" =>"dropdown"}(href="#")
-          Large Button
+          Sign in / up
           %b.caret
         %span.dropdown-arrow
         %ul.dropdown-menu
-          %li= link_to "Register", register_path
-          %li.divider
-          %li= link_to "Login", register_path
-          %li= link_to "Logout", register_path
+          - unless logged_in?
+            %li=link_to "Register", register_path
+            %li.divider
+            %li= link_to "Login", login_path
+          - if logged_in?  
+            %li= link_to "Logout", logout_path
     %form.navbar-form.navbar-right{:action => "#", :role => "search"}
       .form-group
         .input-group
