--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,6 +2,6 @@
 
 = bootstrap_form_for @user do |f|
   = f.text_field :name, placeholder: "Your Name"
-  = f.text_field :email, placeholder: "youremail@domain.com"
-  = f.text_field :password, placeholder: "Your Password"
+  = f.email_field :email, placeholder: "youremail@domain.com"
+  = f.password_field :password, placeholder: "Your Password"
   = f.submit "Register"
