--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -21,12 +21,12 @@
             %li= link_to "Login", login_path
           - if logged_in?  
             %li= link_to "Logout", logout_path
-    %form.navbar-form.navbar-right{:action => "#", :role => "search"}
-      .form-group
-        .input-group
-          %input.form-control{:id => "navbarInput-01", :type => "search", :placeholder => "Search"}
-          %span.input-group-btn
-            %button.btn{:type => "submit"}
-              %span.fui-search
+    / %form.navbar-form.navbar-right{:action => "#", :role => "search"}
+    /   .form-group
+    /     .input-group
+    /       %input.form-control{:id => "navbarInput-01", :type => "search", :placeholder => "Search"}
+    /       %span.input-group-btn
+    /         %button.btn{:type => "submit"}
+    /           %span.fui-search
 
   
