--- a/app/views/newsletters/index.html.haml
+++ b/app/views/newsletters/index.html.haml
@@ -2,13 +2,21 @@
   - @newsletters.each do |newsletter|
     .list-group
       .row
-        .col-md-1{:class => "text-center"}
+        .col-md-1.text-center
           %br
-          %a= "link_to vote_newsletter_path(newsletter, vote: true), method: 'post'"
-            %span{:class => "glyphicon glyphicon-triangle-top text-center"}
-            %p 50 votes
+          = link_to vote_newsletter_path(newsletter), method: "post" do
+            %span.glyphicon.glyphicon-triangle-top.text-center
+            %p= newsletter.votes.count
         .col-md-10
           %h4= newsletter.name
           %h6= newsletter.website_url
           .content
-            = newsletter.description
+            = newsletter.description 
+            .row 
+            - newsletter.categories.each do |category|
+              %button.btn.btn-default.btn-xs{:type => "button"}
+                = category.name
+
+
+
+
