--- a/app/views/newsletters/index.html.haml
+++ b/app/views/newsletters/index.html.haml
@@ -4,7 +4,7 @@
       .row
         .col-md-1.text-center
           %br
-          = link_to vote_newsletter_path(newsletter), method: "post" do
+          = link_to vote_newsletter_path(newsletter), id: "vote_#{newsletter.id}", method: "post" do
             %span.glyphicon.glyphicon-triangle-top.text-center
             %p= newsletter.votes.count
         .col-md-10
