adjust css for white font in category tags

--- a/app/assets/stylesheets/flat-ui.css.scss
+++ b/app/assets/stylesheets/flat-ui.css.scss
@@ -3,6 +3,12 @@
  * Copyright 2013-2014 Designmodo, Inc.
  */
 
+/* white font within category buttons */
+a.white_font {
+    color: #ffffff;
+  }
+
+
 @font-face {
   font-family: 'Lato';
   font-style: normal;
