--- a/app/views/newsletters/index.html.haml
+++ b/app/views/newsletters/index.html.haml
@@ -14,8 +14,8 @@
             = newsletter.description 
             .row 
             - newsletter.categories.each do |category|
-              %button.btn.btn-default.btn-xs{:type => "button"}
-                = category.name
+              %span.btn.btn-default.btn-xs{:type => "button"}
+                = link_to "#{category.name}", category_path(category), {:class => "white_font"}
 
 
 
